--- a/package.json
+++ b/package.json
@@ -9,16 +9,22 @@
     "preview": "vite preview",
     "prepare": "svelte-kit sync || echo ''",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
-    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
+    "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "devDependencies": {
     "@playwright/test": "^1.50.1",
     "@sveltejs/adapter-auto": "^4.0.0",
     "@sveltejs/kit": "^2.16.0",
     "@sveltejs/vite-plugin-svelte": "^5.0.0",
+    "@types/jest": "^29.5.14",
     "@types/node": "^22.13.4",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "svelte": "^5.0.0",
     "svelte-check": "^4.0.0",
+    "ts-jest": "^29.2.6",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
   }
