--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -50,5 +50,9 @@
   "remoteUser": "node",
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {}
-  }
+  },
+  "runArgs": [
+    "-e",
+    "DISPLAY=host.docker.internal:0"
+  ]
 }
