--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,8 @@ vite.config.ts.timestamp-*
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Additional test artifacts
+/test-artifacts/
+*.png
+*.log
