--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -17,10 +17,15 @@ jobs:
         run: npm ci
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
+      - name: Create report directory
+        run: mkdir -p playwright-report
       - name: Run Playwright tests
-        run: npm run test:e2e:simple
+        run: npm run test:e2e:simple || true
+      - name: Generate a report even if tests fail
+        if: always()
+        run: npx playwright show-report --reporter=html
       - uses: actions/upload-artifact@v4
-        if: ${{ !cancelled() }}
+        if: always()
         with:
           name: playwright-report
           path: playwright-report/
