--- a/package.json
+++ b/package.json
@@ -38,5 +38,8 @@
     "ts-jest": "^29.2.6",
     "typescript": "^5.0.0",
     "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "http-proxy": "^1.18.1"
   }
 }
