point to hdmy5 A record

--- a/colorworld-nginx.conf
+++ b/colorworld-nginx.conf
@@ -1,15 +1,8 @@
 server {
     listen 80;
     listen [::]:80;
+    server_name hdmy5.colorworld.live;
     
-    server_name colorworld.live www.colorworld.live;
-    
-    # Redirect HTTP to HTTPS if SSL is set up
-    # location / {
-    #     return 301 https://$host$request_uri;
-    # }
-    
-    # For now, serve HTTP
     location / {
         proxy_pass http://localhost:4173;
         proxy_http_version 1.1;
